Update to 8.0.1