@@ -4,26 +4,29 @@ import amp.awec.WorldEditMod;
 import amp.awec.pattern.BlockMask;
 import com.mojang.nbt.tags.CompoundTag;
 import net.minecraft.core.block.Block;
+import net.minecraft.core.block.Blocks;
 import net.minecraft.core.block.entity.TileEntity;
 import net.minecraft.core.world.World;
+import net.minecraft.core.world.pos.TilePos;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Objects;
 
 public class BlockState {
-	public @Nullable Block<?> block;
+	public @NotNull Block<?> block;
 	public int metadata = 0;
 	public TileEntity tileEntity = null;
 
-	public BlockState(@Nullable Block<?> block, int metadata) {
+	public BlockState(@NotNull Block<?> block, int metadata) {
 		initialize(block, metadata, null);
 	}
 
-	public BlockState(World world, Vec3i pos) {
+	public BlockState(World world, TilePos pos) {
 		initialize(
-			world.getBlock(pos.x, pos.y, pos.z),
-			world.getBlockMetadata(pos.x, pos.y, pos.z),
-			world.getTileEntity(pos.x, pos.y, pos.z)
+			world.getBlockType(pos),
+			world.getBlockData(pos),
+			world.getTileEntity(pos)
 		);
 	}
 
@@ -31,25 +34,20 @@ public class BlockState {
 		initialize(other.block, other.metadata, other.tileEntity);
 	}
 
-	private void initialize(@Nullable Block<?> block, int metadata, @Nullable TileEntity tileEntity) {
+	private void initialize(@NotNull Block<?> block, int metadata, @Nullable TileEntity tileEntity) {
 		this.block = block;
 		this.metadata = metadata;
 		this.tileEntity = tileEntity;
 	}
 
-	public BlockState set(World world, Vec3i pos) {
+	public BlockState set(World world, TilePos pos) {
 		return set(world, pos, BlockMask.ANY);
 	}
 
-	public @Nullable BlockState set(World world, Vec3i pos, BlockMask mask) {
+	public @Nullable BlockState set(World world, TilePos pos, BlockMask mask) {
 		BlockState oldBlock = new BlockState(world, pos);
 		if (!mask.matches(oldBlock)) {
 			return null;
-		}
-
-		int blockId = 0;
-		if (block != null) {
-			blockId = block.id();
 		}
 
 		int setMetadata = metadata;
@@ -58,18 +56,18 @@ public class BlockState {
 			setMetadata = oldBlock.metadata;
 		}
 
-		world.setBlockAndMetadataRaw(pos.x, pos.y, pos.z, blockId, setMetadata);
-		world.markBlockNeedsUpdate(pos.x, pos.y, pos.z);
+		world.setBlockTypeDataRaw(pos, block, setMetadata);
+		world.markBlockNeedsUpdate(pos);
 
 		if (tileEntity != null) {
 			try {
-				TileEntity tileEntityCopy = tileEntity.getClass().newInstance();
+				TileEntity tileEntityCopy = tileEntity.getClass().getDeclaredConstructor().newInstance();
 				CompoundTag copiedTag = new CompoundTag();
 				tileEntity.writeToNBT(copiedTag);
 				tileEntityCopy.readFromNBT(copiedTag);
 				this.tileEntity = tileEntityCopy;
 				WorldEditMod.LOGGER.info("Created copy of tile entity");
-				world.setTileEntity(pos.x, pos.y, pos.z, tileEntityCopy);
+				world.setTileEntity(pos, tileEntityCopy);
 			}
 			catch (Exception e) {
 				WorldEditMod.LOGGER.error("Failed to create copy of tile entity at " + pos);
@@ -81,27 +79,20 @@ public class BlockState {
 
 	@Override
 	public boolean equals(Object obj) {
-		if (!(obj instanceof BlockState)) {
+		if (!(obj instanceof BlockState other)) {
 			return false;
 		}
 
-		BlockState other = (BlockState) obj;
 		return this.block == other.block && this.metadata == other.metadata;
 	}
 
 	@Override
 	public String toString() {
-		if (block == null) {
-			return "air";
-		}
 		return block.namespaceId().value() + ":" + metadata;
 	}
 
 	@Override
 	public int hashCode() {
-		if (block == null) {
-			return Objects.hash(0, metadata);
-		}
 		return Objects.hash(block.id(), metadata);
 	}
 }
